--- a/3omri/khadija/index.html
+++ b/3omri/khadija/index.html
@@ -878,7 +878,7 @@
         <div class="playlist-section">
             <div class="playlist-header">
                 <h2>Our Playlist</h2>
-                <p>Add your favorite songs here!</p>
+                <p>Add your favorite songs/vids here!</p>
             </div>
             
             <div class="playlist-controls">
