--- a/3omri/khadija/index.html
+++ b/3omri/khadija/index.html
@@ -1065,7 +1065,7 @@ document.addEventListener('DOMContentLoaded', function() {
             <div class="video-info">
                 <div class="video-title">${title}</div>
                // صحيح: يعرض التاريخ المخزن في Firebase
-small>Added on ${new Date(video.date).toLocaleDateString()}</small>
+            <small>Added on ${new Date(video.date).toLocaleDateString()}</small>
             </div>
         `;
         
