--- a/3omri/index.html
+++ b/3omri/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>  <html lang="en">  
-<head> <link rel="icon" href="favicon.ico" type="image/x-icon"> <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<head>  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <title>a love fairytale</title>  
