--- a/3omri/index.html
+++ b/3omri/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>  <html lang="en">  
-<head>  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<head> <link rel="icon" href="favicon.ico" type="image/x-icon"> <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <title>a love fairytale</title>  
@@ -694,7 +694,7 @@
 
 <p class="stats">Yes, it's not just in your head! NPC's population has increased by more than 1,168,714,491 npc;b!</p>
 <p class="stats">amidst all this chaos...sweatheart</p>
-<p class="stats special">no one has touched my heart the way your gentle hands do </p>
+<p class="stats special">no one has touched my heart the way your gentle hands do <3</p>
 <!-- Animation for moving the image from right to left -->
 <div class="progress-container">
     <!-- القسم الأيسر --><div class="spacer"></div>
@@ -827,14 +827,14 @@
 </div>
 
 </div>
-
+</div> 
 
 <a href="/3omri/khadija/" id="floating-moon" style="position:fixed; bottom:30px; right:30px; font-size:3rem; cursor:pointer; z-index:100; animation:float 4s ease-in-out infinite; text-decoration:none; color:inherit;">
    🌙
 </a>
 
 
-<script> https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js>  
+<script https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js>  
     function calculateDaysLived(birthDate) {  
         const birth = new Date(birthDate);  
         const today = new Date();  
@@ -1160,5 +1160,8 @@ setInterval(updateValentineProgress, 1000);
 
 
    </script>
-   </body>   
+   </body>    <footer>
+    
+</footer>
+
     </html>
