--- a/3omri/index.html
+++ b/3omri/index.html
@@ -2,7 +2,7 @@
 <head> <link rel="icon" href="favicon.ico" type="image/x-icon"> <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
-    <title>a love fairytale</title>  
+    <title> A+K Calendar</title>  
     <style>  
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
 
