--- a/3omri/khadija/index.html
+++ b/3omri/khadija/index.html
@@ -23,6 +23,65 @@
 .swal2-popup video::-webkit-media-controls-play-button {
     background-color: var(--accent-pink);
     border-radius: 50%;
+}/* أنماط خاصة للاستجابة على الهواتف - قسم الكواكب */
+@media (max-width: 768px) {
+  .memory-orbit {
+    height: auto !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    padding: 1rem;
+  }
+  
+  .memory-planet {
+    position: relative !important;
+    top: auto !important;
+    left: auto !important;
+    right: auto !important;
+    transform: none !important;
+    margin-bottom: 2rem;
+    width: 280px !important;
+    height: 280px !important;
+  }
+  
+  .memory-planet:nth-child(2),
+  .memory-planet:nth-child(3),
+  .memory-planet:nth-child(4) {
+    width: 240px !important;
+    height: 240px !important;
+  }
+  
+  .planet-overlay {
+    padding: 1rem;
+  }
+  
+  .planet-title {
+    font-size: 1.7rem !important;
+  }
+  
+  .planet-date {
+    font-size: 0.8rem !important;
+    padding-left: 20px !important;
+  }
+}
+
+@media (max-width: 480px) {
+  .memory-planet {
+    width: 250px !important;
+    height: 250px !important;
+  }
+  
+  .memory-planet:nth-child(2),
+  .memory-planet:nth-child(3),
+  .memory-planet:nth-child(4) {
+    width: 220px !important;
+    height: 220px !important;
+  }
+  
+  .planet-title {
+    font-size: 1.5rem !important;
+  }
 }
 </style>
 
@@ -319,7 +378,7 @@ function showGiftVideo() {
         title: '💝',
         html: `<div style="position:relative; padding-top:56.25%">
                   <video controls style="position:absolute;top:0;left:0;width:100%;height:100%;border-radius:10px;box-shadow:0 5px 25px rgba(255,75,138,0.3)">
-                      <source src="/3omri/khadija/assets/videos/mybday" type="video/mp4">
+                      <source src="/3omri/khadija/assets/videos/mybday.mp4" type="video/mp4">
                   </video>
                </div>
                <p style="margin-top:10px;font-style:italic;color:var(--accent-gold)">ro7o bday gift for me~</p>`,
