--- a/baby.html
+++ b/baby.html
@@ -918,7 +918,7 @@
                 display: flex;
                 flex-direction: column;
                 background: var(--primary-dark);
-                z-index: 99;
+                z-index: 90;
             }
             
             /* إخفاء الخلفية الديناميكية في وضع السينما على الموبايل */
@@ -1101,7 +1101,7 @@
                 <div class="room-icon">
                     <i class="fas fa-heart"></i>
                 </div>
-                <span class="room-name">our watch 7afla :3</span>
+                <span class="room-name">AL+KB watch room :3</span>
                 <div class="online-indicator" id="onlineIndicator">
                     <span class="online-dot"></span>
                     <span id="onlineCount">0 online</span>
@@ -1184,7 +1184,7 @@
                 <div class="chat-header">
                     <div class="chat-title">
                         <i class="fas fa-heart"></i>
-                        <span>Our chat</span>
+                        <span>chat</span>
                     </div>
                     
                     <div class="chat-actions">
